--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
 
     <!-- VIDEO -->
     <section>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item slider1 active">
                     <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
                         <source src="vid/dlscrest.mp4" type="video/mp4">
                     </video>
