--- a/index.html
+++ b/index.html
@@ -223,23 +223,23 @@
     <div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/faculty.jpg" alt="Faculty">
+                <img height="400px" src="img/slider/slider1.jpg" alt="slider1">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/gallery.jpg" alt="Gallery">
+                <img height="400px" src="img/slider/slider2.jpg" alt="slider2">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/students.jpg" alt="Students">
+                <img height="400px" src="img/slider/slider3.jpg" alt="slider3">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/talk.jpg" alt="Talk">
+                <img height="400px" src="img/slider/slider4.jpg" alt="slider4">
                 <div></div>
             </div>
             <div class="carousel-items">
-                <img height="400px" src="img/gallery/winners.jpg" alt="Winners">
+                <img height="400px" src="img/slider/slider5.jpg" alt="slider5">
                 <div></div>
             </div>
         </div>
