--- a/index.html
+++ b/index.html
@@ -219,8 +219,26 @@
         </div>
     </section>
 
+    <!--Breaking News section-->
+<section class="wed-rights">
+    <div class="container">
+        <div class="row">
+            <div class="copy-right">
+            <!--marquee behavior="scroll" direction="left" onmousemove="this.stop();" onmouseout="this.start();"-->
+                <a href="news-londonal-admission.php.html">
+                    <span style="color:#fff;text-decoration:underline;font-weight:600;">
+                        <center>
+                            G.C.E A/L new admissions for year 2021/2023
+                        </center>
+                    </span>
+                </a>
+            <!--/marquee-->
+            </div>
+        </div>
+    </div>
+    </section>
     <!-- carousel -->
-    <div class="carousel-wrapper">
+    <!--div class="carousel-wrapper">
         <div class="carousel" style="margin: 0 auto">
             <div class="carousel-items">
                 <img height="400px" src="img/slider/slider1.jpg" alt="slider1">
@@ -240,7 +258,7 @@
             </div>
             <div class="carousel-items">
                 <img height="400px" src="img/slider/slider5.jpg" alt="slider5">
-                <div></div>
+                <div></div-->
             </div>
         </div>
     </div>
