--- a/obu.html
+++ b/obu.html
@@ -285,10 +285,10 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
 <div class="container">
     <div class="row">
         <div class="col-md-4">
-            <h4>Lorem Ipsum</h4>
+            <h4>About De La Salle</h4>
             <p>
-                Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            </p><img src="http://farm7.staticflickr.com/6043/6311448642_841c424a65.jpg" class="img-responsive center-block" alt="tv">
+                De La Salle College, situated at the entrance to the fishing community at Mutwal, where the less - privileged and the marginalized eke out a modest existence, has been a haven of knowledge and inspiration to all and sundry during the last hundred years. It has very faithfully and constructively served thousands and thousands of students, adequately equipping them to face the challenges and exigencies of modern society, with courage and optimism.
+            </p><img src="img/dlsobucrest.jpg" class="img-responsive center-block" alt="Crest">
             
             <p>
                 <small>Image: <a href="http://www.flickr.com/photos/photography_and_design/6311448642/sizes/l/" target="_blank">Jonas' Design</a><br>
