--- a/obu.html
+++ b/obu.html
@@ -272,11 +272,10 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
         <h3>Reference</h3>
         <p>
         <strong><mark>Update!</mark>  www.lasallions.lk</strong>
-        <a href="http://bootsnipp.com/mrmccormack/snippets/d2DzN">Mr. M.'s YouTube/Vimeo Responsive Embeds - Bootstrap 3.2</a>
         </p>
         
         <p>
-            <a href="www.lasallions.lk" target="_blank">ref</a>
+            <a href="www.lasallions.lk" target="_blank">ref to web</a>
         </p>
         <hr>
     </div><!--.row -->
@@ -286,9 +285,10 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     <div class="row">
         <div class="col-md-4">
             <h4>About De La Salle</h4>
+            <img src="img/dlsobucrest.jpg" class="img-responsive center-block" alt="Crest">
             <p>
                 De La Salle College, situated at the entrance to the fishing community at Mutwal, where the less - privileged and the marginalized eke out a modest existence, has been a haven of knowledge and inspiration to all and sundry during the last hundred years. It has very faithfully and constructively served thousands and thousands of students, adequately equipping them to face the challenges and exigencies of modern society, with courage and optimism.
-            </p><img src="img/dlsobucrest.jpg" class="img-responsive center-block" alt="Crest">
+            </p>
             
             <p>
                 <small>Image: <a href="www.kasuncfernando.tk" target="_blank">By Kasun</a><br>
