--- a/obu.html
+++ b/obu.html
@@ -1122,6 +1122,7 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/434d359724.js"></script>
     <script>
+        <script>
 
 (function($) {
     'use strict';
