--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/scroll.css"
+    <link rel="stylesheet" type="text/css" href="..css/scroll.css"
 </head>
 
 <body>
@@ -148,7 +148,7 @@
             <div class="contents" style="text-align:center;">
                 
                 <h4>College Flag</h4>
-                <img src="gif/wave-flag animation1.gif" alt="" style="width: 400px;">
+                <img src="https://github.com/kasuncfdo/dls/blob/main/gif/wave-flag%20animation1.gif" alt="" style="width: 400px;">
                 <center><h3>The Motto</h3> </center>
                 <p style="text-align: center;">
                     Red - the colours of St. John Baptist De La Salle<br>
