--- a/obu.html
+++ b/obu.html
@@ -238,22 +238,9 @@
             </div>
         </div>
         <style>
-            .sec3, .sec6, .sec7, .sec8, footer, .aboutSec2, .aboutSec3, .aboutSec5 {padding: 7vw;}
-  .sec3Box {float: none; height: 100vw; width: 82vw; margin: 10vw auto 13vw; padding: 3vw 5vw 5vw;}
-  .sec3Box ul {height: 82vw;}
-  .sec3Box ul li {margin-bottom: 5vw;}
-  .sec3Box .tagBox {padding: 1.5vw 3.5vw; margin-left: -7.5vw; margin-bottom: 2vw;}
-  .sec3Box .tagBox span {font-size: 4vw;}
-
-
-
-
-  .sec4 {padding: 40vw 0vw 0vw;}
-  .sec4Bg {height: 70vh; background-size: cover; background-position: center !important;}
-  .sec4Text {padding: 5vw; max-width: 87vw; margin-right: 7vw; margin-top: -30vw;}
-
-
-
+            .sec5 video {width: 98.95vw;}
+.desktopVideo {display: block;}
+.mobileVideo {display: none;}
 
   .desktopVideo {display: none;}
   .mobileVideo {display: block;}
