--- a/obu.html
+++ b/obu.html
@@ -237,6 +237,64 @@
                     <p></p>
             </div>
         </div>
+        </div>
+        <!-- NEWS EVENTS -->
+        <style>
+            .about-sp{
+     padding: 0px 30px;
+}
+.com-sp{
+     padding:100px 0px;
+}
+        </style>
+    <section>
+        <div class="ed-res-bg">
+		<div class="container com-sp pad-bot-70">
+            <div class="row">
+                    <div class="con-title">
+                        <h2>NEWS & EVENTS</h2>
+                    </div>
+                <div class="cor about-sp">
+                    <div class="ed-rsear">
+                        <div class="ed-rsear-in">
+                            <ul>
+                                <li>
+									<div class="ed-rese-grid">
+										<div class="ed-faci-full-top">
+											<img src="images/news-events/125.jpg" alt="">
+										</div>
+										<div class="ed-rsear-dec ed-faci-full-bot">
+											<h4><a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank">125<sup>th</sup> ANNIVERSARY OF ST. JOSEPH'S COLLEGE </a></h4>
+											<p>Today we celebrate 125 years since the founding of St. Joseph’s College, Colombo on the 2<sup>nd</sup> of March, 1896.</p>
+											<a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank" class="read-line-btn">Read more</a>
+										</div>
+									</div>
+                                </li>
+                                <li>
+									<div class="ed-rese-grid">
+										<div class="ed-faci-full-top">
+											<img src="images/news-events/new-web.jpg" alt="">
+										</div>
+										<div class="ed-rsear-dec ed-faci-full-bot">
+											<h4><a href="news-new-website.php">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
+											<p>We are very excited to announce the launch of our newly designed website. After two months of hard work and dedication of ICT Society...</p>
+											<a href="news-new-website.php" class="read-line-btn">Read more</a>
+										</div>
+									</div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="ed-about-sec1">
+                        <div class="col-md-6"></div>
+                        <div class="col-md-6"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+		</div>
+    </section>
+    <!--SECTION END-->
         <style>
             .sec3 {
   padding: 5vw 12.5vw;
