--- a/obu.html
+++ b/obu.html
@@ -261,11 +261,11 @@
                                 <li>
 									<div class="ed-rese-grid">
 										<div class="ed-faci-full-top">
-											<img src="images/news-events/125.jpg" alt="">
+											<img src="img/IIITV_Logo_1x1_small.png" alt="">
 										</div>
 										<div class="ed-rsear-dec ed-faci-full-bot">
-											<h4><a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank">125<sup>th</sup> ANNIVERSARY OF ST. JOSEPH'S COLLEGE </a></h4>
-											<p>Today we celebrate 125 years since the founding of St. Joseph’s College, Colombo on the 2<sup>nd</sup> of March, 1896.</p>
+											<h4><a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank">125<sup>th</sup> ANNIVERSARY OF De La Salle  College </a></h4>
+											<p>Today we celebrate 116 years since the founding of De La Salle College, Colombo on the 2<sup>nd</sup> of March, 1896.</p>
 											<a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank" class="read-line-btn">Read more</a>
 										</div>
 									</div>
@@ -273,7 +273,7 @@
                                 <li>
 									<div class="ed-rese-grid">
 										<div class="ed-faci-full-top">
-											<img src="images/news-events/new-web.jpg" alt="">
+											<img src="img/dlsd.jpg" alt="">
 										</div>
 										<div class="ed-rsear-dec ed-faci-full-bot">
 											<h4><a href="news-new-website.php">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
