--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -19,15 +19,15 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent" />
     <meta property="og:url" content="https://www.delasalle.lk/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png" />
-    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg"/>
+    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="567" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:domain" content="www.delasalle.lk" />
     <meta name="twitter:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent" />
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg"/>
 
     <!-- Primary Meta Tags -->
 <title>Old Boys Union | De La Salle College, Colombo - Indivisa Manent</title>
@@ -39,14 +39,14 @@
 <meta property="og:url" content="https://delasalle.lk">
 <meta property="og:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent">
 <meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://delasalle.lk">
 <meta property="twitter:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent">
 <meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png">
+<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg">
 
 
     <style>
