--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -21,6 +21,8 @@
     <meta property="og:url" content="https://www.delasalle.lk/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg"/>
     <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.jpg" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="567" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:domain" content="www.delasalle.lk" />
