--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="carousel-caption slider-con">
                         <h2>OVER 116TH PROUD ANNIVERSARY WITH <span> DE LA SALLE COLLEGE</span></h2>
          
-                        <img height="70px" src="img/IIITV_Logo_1x1_small.jpg" alt="DLSOBU">
+                        <img height="70px" src="img/IIITV_Logo_1x1_small.png" alt="DLSOBU">
                 <div></div>
                         <p>~ INDIVISA MANENT ~</p>
                         
