--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -5,13 +5,49 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>De La Salle College Colombo 15| Mission & Vision</title>
+        <title>Mission & Vision |De La Salle College, Colombo - "Indivisa Manent"</title>
         <!--Style starts-->
         <link rel="icon" type="image/png" href="../img/IIITV_Logo_1x1_small.png">
         <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/scroll.css">
+
+         <!--Site Meta-->
+
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Mission & Vision | De La Salle College,Colombo - Indivisa Manent" />
+    <meta property="og:url" content="https://www.delasalle.lk/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
+    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="567" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:domain" content="www.delasalle.lk" />
+    <meta name="twitter:title" content="Mission & Vision | De La Salle College,Colombo - Indivisa Manent" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
+
+    <!-- Primary Meta Tags -->
+<meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://delasalle.lk">
+<meta property="og:title" content="Mission & Vision | De La Salle College, Colombo - Indivisa Manent">
+<meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://delasalle.lk">
+<meta property="twitter:title" content="Mission & Vision | De La Salle College, Colombo - Indivisa Manent">
+<meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg">
+
     </head
 
     <body>
