--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Mission & Vision | De La Salle College,Colombo - Indivisa Manent" />
     <meta property="og:url" content="https://www.delasalle.lk/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
-    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/our%20vision.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="567" />
     <meta name="twitter:card" content="summary_large_image" />
