--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -191,7 +191,7 @@
         <!-- /header -->
         <div style="text-align: center;">
                 <a href="#" target="_blank"-->
-                    <img class="responsive-img" src="gif/Indivisa-Manent.gif">
+                    <img class="responsive-img" src="gif/wave-flag animation1.gif">
                 </a>
             </div>
             <section>
