--- a/blog1.html
+++ b/blog1.html
@@ -211,6 +211,11 @@
               max-width: 1288px;
               border-radius: 20px;
               margin: 60px auto;
+              color: #fff;
+  background-color: rgba(255,255,255,0.06);
+  border: 1px solid rgba(255,255,255,0.1);
+  backdrop-filter: blur(10px);
+}
             }
             
             .highlight {
