--- a/contact-us.html
+++ b/contact-us.html
@@ -269,6 +269,9 @@ body {
                       </div>
                       <h1 class="post-full-title" style="text-align: center;">COLLEGE IDENTITY</h1>
                       </div>
+                  </section>
+              </div>
+    </div>
         <br>
         <section>
         <style>
