--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -171,7 +171,7 @@
             <br/><br/>
             <div class="svg-container">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
-                 width="2482.000000pt" height="3508.000000pt" viewBox="0 0 2482.000000 3508.000000"
+                 width="auto" height="auto" viewBox="0 0 2482.000000 3508.000000"
                  preserveAspectRatio="xMidYMid meet">
                 
                 <g transform="translate(0.000000,3508.000000) scale(0.100000,-0.100000)"
