--- a/blog1.html
+++ b/blog1.html
@@ -228,6 +228,10 @@
             .shadow2 { 
               box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
             }
+
+            .contents-wrapper{
+                background-image: url("./img/bg\ layer.jpg");
+            }
                 </style>
             
                 <!-- Content wrapper -->
