--- a/blog1.html
+++ b/blog1.html
@@ -543,6 +543,53 @@
                     <p></p>
             </div>
         </div>
+        <section>
+            <div class="ed-res-bg">
+            <div class="container com-sp pad-bot-70">
+                <div class="row">
+                        <div class="con-title">
+                            <h2>NEWS &amp; EVENTS</h2>
+                        </div>
+                    <div class="cor about-sp">
+                        <div class="ed-rsear">
+                            <div class="ed-rsear-in">
+                                <ul>
+                                    <li>
+                                        <div class="ed-rese-grid">
+                                            <div class="ed-faci-full-top">
+                                                <img src="img/dlsobucrest.png" alt="">
+                                            </div>
+                                            <div class="ed-rsear-dec ed-faci-full-bot">
+                                                <h4><a href="#" target="_blank">125<sup>th</sup> ANNIVERSARY OF COLLEGE </a></h4>
+                                                <p>Today we celebrate 125 years since the foundingCollege, Colombo on the 2<sup>nd</sup> of March, .</p>
+                                                <a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank" class="read-line-btn">Read more</a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="ed-rese-grid">
+                                            <div class="ed-faci-full-top">
+                                                <img src="img/dlsd.jpg" alt="">
+                                            </div>
+                                            <div class="ed-rsear-dec ed-faci-full-bot">
+                                                <h4><a href="">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
+                                                <p>We are very excited to announce the launch of our newly designed website. After two months of hard work and dedication of ICT Society...</p>
+                                                <a href="" class="read-line-btn">Read more</a>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="ed-about-sec1">
+                            <div class="col-md-6"></div>
+                            <div class="col-md-6"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
