--- a/blog1.html
+++ b/blog1.html
@@ -683,46 +683,6 @@ padding: 6px 0px;
 	float:left;
 	width:20%;
 }
-.ad-log-main{
-    position: fixed;
-    overflow: hidden;
-	background: #005C97;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    width: 100%;
-    height: 100%;
-}
-.ad-log-in{
-    position: relative;
-    overflow: hidden;
-    width: 40%;
-    margin: 25px;
-    margin: 0 auto;
-    text-align: center;
-    background: #fff;	
-    padding: 50px;
-    margin-top: 50px;
-    border-radius: 4px;
-}
-.ad-log-in-logo{}
-.ad-log-in-logo a{}
-.ad-log-in-logo a img{}
-.ad-log-in-con{
-    position: relative;
-    overflow: hidden;
-}
-.log-in-pop-right{
-}
-.ad-log-in-con h4{
-    margin-bottom: 15px;
-    margin-top: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #e66030;	
-}
-.ad-log-in-con p{}
-.ad-log-in-con form{}
-.ad-log-in-con form input{}
             </style>
             <div class="ed-res-bg">
             <div class="container com-sp pad-bot-70">
@@ -749,7 +709,7 @@ padding: 6px 0px;
                                     <li>
                                         <div class="ed-rese-grid">
                                             <div class="ed-faci-full-top">
-                                                <img src="img/dlsd.jpg" alt="">
+                                                <img src="img/dlsobucrest.png" alt="">
                                             </div>
                                             <div class="ed-rsear-dec ed-faci-full-bot">
                                                 <h4><a href="">OUR NEW WEBSITE HAS BEEN LAUNCHED </a></h4>
