--- a/index.html
+++ b/index.html
@@ -700,10 +700,10 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <h2>
+                <p style="font-family: 'Times New Roman', Times, serif">
                   OVER 116TH PROUD ANNIVERSARY WITH
                   <span> DE LA SALLE COLLEGE</span>
-                </h2>
+                </p>
 
                 <img
                   height="70px"
