--- a/index.html
+++ b/index.html
@@ -700,9 +700,9 @@
                 <source src="vid/dlscrest.mp4" type="video/mp4" />
               </video>
               <div class="carousel-caption slider-con">
-                <p style="font-family: 'Times New Roman', Times, serif">
-                  OVER 116TH PROUD ANNIVERSARY WITH
-                  <span> DE LA SALLE COLLEGE</span>
+                <p style="font-family: 'Times New Roman', Times, serif" >
+                 <strong> OVER 116TH PROUD ANNIVERSARY WITH
+                  <span> DE LA SALLE COLLEGE </strong></span>
                 </p>
 
                 <img
