--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@
                  <strong> OVER 116TH PROUD ANNIVERSARY WITH
                   <span> DE LA SALLE COLLEGE </strong></span>
                 </p>
+              </div>
 
                 <img
                   height="70px"
