--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
             <div class="item slider1 active">
+            </div>
               <style>
                 * {
                   -webkit-box-sizing: border-box;
